--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -5,7 +5,8 @@
       "src": "app/main.py",
       "use": "@vercel/python",
       "config": {
-        "maxLambdaSize": "15mb"
+        "maxLambdaSize": "15mb",
+        "excludeFiles": ["frontend/**", "tests/**", "venv/**", "__pycache__/**"]
       }
     }
   ],
